--- a/_config.yml
+++ b/_config.yml
@@ -44,5 +44,5 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-remote-theme
-staging: https://site-creation-base2-staging.netlify.app
-prod: https://site-creation-base2-prod.netlify.app
+staging: https://staging.dbib5om10sev8.amplifyapp.com
+prod: https://master.dbib5om10sev8.amplifyapp.com
