--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,10 +1,9 @@
 contact_us: /contact-us/
 show_reach: true
-feedback: 
 faq: /faq/
 social_media:
-    facebook: https://www.facebook.com/YourFBPage
-    twitter: https://www.twitter.com/YourTwitter
-    youtube: https://www.youtube.com/YourYoutube
-    instagram: https://www.instagram.com/your.insta/
-    linkedin: https://www.linkedin.com/company/YourAgency
+  facebook: https://www.facebook.com/NorthlandTv/
+  twitter: https://www.twitter.com/YourTwitter
+  youtube: https://www.youtube.com/channel/UC5UqDpOlKrgc15_W7LbzXdQ
+  instagram: https://www.instagram.com/tkgsmoments
+  linkedin: https://www.linkedin.com/company/YourAgency
