--- a/_about-tkgs/collection.yml
+++ b/_about-tkgs/collection.yml
@@ -2,5 +2,6 @@ collections:
   about-tkgs:
     output: true
     order:
+      - TKGian Creed.md
       - TKGS School Song.md
       - Contact Information.md
