--- a/_about-tkgs/collection.yml
+++ b/_about-tkgs/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-tkgs:
     output: true
     order:
+      - School Vision, Mission & Value/School Vision, Mission & Values.md
       - School Vision, Mission & Value/.keep
       - TKGian Creed.md
       - TKGS School Song.md
