--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Our Partners/Alumni.md
       - Our Partners/Committee.md
       - Our Partners/ParentLink.md
       - Our Partners/.keep
