--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -2,4 +2,5 @@ collections:
   cca:
     output: true
     order:
+      - Clubs and Service Boards/Infocomm Club (Media Production).md
       - Clubs and Service Boards/.keep
