--- a/_learning-at-tkgs/collection.yml
+++ b/_learning-at-tkgs/collection.yml
@@ -2,6 +2,7 @@ collections:
   learning-at-tkgs:
     output: true
     order:
+      - Student Development/Character and Citizenship Education.md
       - Student Development/Sexuality Education.md
       - Student Development/.keep
       - Key School Event.md
