--- a/_learning-at-tkgs/collection.yml
+++ b/_learning-at-tkgs/collection.yml
@@ -3,6 +3,7 @@ collections:
     output: true
     order:
       - Signature Programmes/.keep
+      - Academic/Physical Education.md
       - Academic/.keep
       - Student Development/Student Well–being.md
       - Student Development/Counselling.md
