--- a/_resources/collection.yml
+++ b/_resources/collection.yml
@@ -2,6 +2,7 @@ collections:
   resources:
     output: true
     order:
+      - School Calendars & Events.md
       - Admission/Sec 1 Admission.md
       - Admission/Appeal Process for Sec 1 Admission.md
       - Admission/.keep
