--- a/_resources/collection.yml
+++ b/_resources/collection.yml
@@ -2,6 +2,7 @@ collections:
   resources:
     output: true
     order:
+      - Students Resources.md
       - Staff Resources.md
       - Parent Resources.md
       - School Calendars & Events.md
