--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -2,6 +2,7 @@ collections:
   cca:
     output: true
     order:
+      - Uniformed Groups/.keep
       - Visual & Performing Arts/Visual & Performing Arts.md
       - Visual & Performing Arts/Art Club.md
       - Visual & Performing Arts/Choir.md
