--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -2,6 +2,7 @@ collections:
   cca:
     output: true
     order:
+      - Uniformed Groups/Red Cross Youth.md
       - Uniformed Groups/Uniformed Groups.md
       - Uniformed Groups/.keep
       - Visual & Performing Arts/Visual & Performing Arts.md
