--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -2,6 +2,7 @@ collections:
   cca:
     output: true
     order:
+      - Sports & Games/Sailing.md
       - Sports & Games/Softball.md
       - Sports & Games/Tennis.md
       - Sports & Games/Tenpin Bowling.md
