--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@ links:
     collection: about-tkgs
   - title: About Us
     collection: about-us
+  - title: CCA
+    collection: cca
   - title: Learning @ TKGS
     collection: learning-at-tkgs
   - title: TKGS Sparkling Moments
