--- a/_announcements/collection.yml
+++ b/_announcements/collection.yml
@@ -2,4 +2,5 @@ collections:
   announcements:
     output: true
     order:
+      - Class of 2021 School Graduation Certificate & Testimonial.md
       - Announcements.md
