--- a/_announcements/collection.yml
+++ b/_announcements/collection.yml
@@ -2,6 +2,7 @@ collections:
   announcements:
     output: true
     order:
+      - Release of O – Level Results.md
       - Financial Assistance Scheme (FAS) 2023.md
       - Class of 2021 School Graduation Certificate & Testimonial.md
       - Announcements.md
