--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - School Management Committee.md
       - School Advisory Committee.md
-      - Teachers Leaders & AEDs.md
+      - Teacher Leaders & AEDs.md
       - Non–Teaching Staff.md
       - Our Partners/Alumni.md
       - Our Partners/Committee.md
