--- a/_learning-at-tkgs/collection.yml
+++ b/_learning-at-tkgs/collection.yml
@@ -21,4 +21,4 @@ collections:
       - Student Development/Character and Citizenship Education.md
       - Student Development/Sexuality Education.md
       - Student Development/.keep
-      - Key School Event.md
+      - Key School Events.md
