--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -2,6 +2,7 @@ collections:
   cca:
     output: true
     order:
+      - Sports & Games/test CCA.md
       - Sports & Games/.keep
       - Sports & Games/Sports & Games.md
       - Sports & Games/Badminton.md
