--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - test.md
       - Key Personnel.md
       - School Advisory Committee.md
       - Teaching Staff.md
