--- a/_admin/collection.yml
+++ b/_admin/collection.yml
@@ -2,6 +2,7 @@ collections:
   admin:
     output: true
     order:
+      - test.md
       - test CCA.md
       - 2020.md
       - School Calendars & Events.md
