{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_about-tkgs/collection.yml
+++ b/_about-tkgs/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Principal's Message.md
       - Vision, Mission & Values/.keep
-      - Vision, Mission & Values/Vision, Mission & Values.md
+      - Vision, Mission & Values/Our VMV.md
       - Vision, Mission & Values/TKGS Crest.md
       - Vision, Mission & Values/Code of Conduct.md
       - TKGian Creed.md
