{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_about-tkgs/collection.yml
+++ b/_about-tkgs/collection.yml
@@ -3,6 +3,7 @@ collections:
     output: true
     order:
       - Principal's Message.md
+      - Vision, Mission & Values/School VMV.md
       - Vision, Mission & Values/.keep
       - Vision, Mission & Values/Our VMV.md
       - Vision, Mission & Values/TKGS Crest.md
