--- a/_about-tkgs/collection.yml
+++ b/_about-tkgs/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-tkgs:
     output: true
     order:
+      - School VMV.md
       - Principal's Message.md
       - Vision, Mission & Values/.keep
       - Vision, Mission & Values/Our VMV.md
