{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_about-tkgs/collection.yml
+++ b/_about-tkgs/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-tkgs:
     output: true
     order:
+      - Code of Conduct.md
       - TKGS Crest.md
       - Our VMV.md
       - School VMV.md
