{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_about-tkgs/collection.yml
+++ b/_about-tkgs/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Code of Conduct.md
       - TKGS Crest.md
-      - Our VMV.md
+      - Vision, Mission & Values.md
       - School VMV.md
       - Principal's Message.md
       - TKGian Creed.md
