--- a/_admin/collection.yml
+++ b/_admin/collection.yml
@@ -2,6 +2,7 @@ collections:
   admin:
     output: true
     order:
+      - terms-of-use.md
       - privacy.md
       - example-page.md
       - faq.md
