--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,6 +1,5 @@
 contact_us: /contact-us/
-show_reach: true
-faq: /faq/
+show_reach: false
 social_media:
   youtube: https://www.youtube.com/channel/UC5UqDpOlKrgc15_W7LbzXdQ
   instagram: https://www.instagram.com/tkgsmoments
