--- a/_admin/collection.yml
+++ b/_admin/collection.yml
@@ -2,6 +2,7 @@ collections:
   admin:
     output: true
     order:
+      - Contact Information.md
       - example-page.md
       - faq.md
       - School VMV.md
