{"message":"Update file: _config.yml","fileName":"_config.yml","userId":"819"}

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Tanjong Katong Girls' School
 url: https://tkgs.moe.edu.sg
 favicon: /images/logo.png
 colors:
-  primary-color: "#f4c759"
+  primary-color: "#9b1b1e"
   secondary-color: "#135400"
   media-colors:
     - title: media-color-one
