--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ colors:
     - title: media-color-one
       color: "#b50e0e"
     - title: media-color-two
-      color: "#744d9f"
+      color: "#9b1b1e"
     - title: media-color-three
       color: "#00838f"
     - title: media-color-four
