{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -24,6 +24,7 @@ collections:
       - Visual & Performing Arts/Symphonic Band.md
       - Visual & Performing Arts/TK Thespians (Drama).md
       - Visual & Performing Arts/.keep
+      - Clubs and Service Boards/Art Club.md
       - Clubs and Service Boards/Clubs & Service Boards.md
       - Clubs and Service Boards/Interact Club.md
       - Clubs and Service Boards/Library Board.md
