{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -17,6 +17,7 @@ collections:
       - Uniformed Groups/Girl Guides.md
       - Uniformed Groups/National Police Cadet Corps.md
       - Uniformed Groups/Red Cross Youth.md
+      - Visual & Performing Arts/Art Club.md
       - Visual & Performing Arts/Visual & Performing Arts.md
       - Visual & Performing Arts/Choir.md
       - Visual & Performing Arts/Dance (Modern).md
