{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_admin/collection.yml
+++ b/_admin/collection.yml
@@ -2,5 +2,6 @@ collections:
   admin:
     output: true
     order:
+      - CCA Achievements.md
       - Art Club (Mockup Page).md
       - Contact Information.md
