{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_hidden-pages/collection.yml
+++ b/_hidden-pages/collection.yml
@@ -2,5 +2,5 @@ collections:
   hidden-pages:
     output: true
     order:
-      - About your iPad/About your iPad.md
+      - About your iPad/Home.md
       - About your iPad/.keep
