{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"819"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,3 +12,5 @@ links:
     collection: tkgs-sparkling-moments
   - title: Resources
     collection: resources
+  - title: Connect with us
+    collection: connect-with-us
