{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_connect-with-us/collection.yml
+++ b/_connect-with-us/collection.yml
@@ -2,4 +2,5 @@ collections:
   connect-with-us:
     output: true
     order:
+      - Our Social Media Platforms.md
       - Contact Information.md
