--- a/_connect-with-us/collection.yml
+++ b/_connect-with-us/collection.yml
@@ -2,5 +2,6 @@ collections:
   connect-with-us:
     output: true
     order:
+      - Appreciation Notes.md
       - Our Social Media Platforms.md
       - Contact Information.md
