--- a/_hidden-pages/collection.yml
+++ b/_hidden-pages/collection.yml
@@ -2,5 +2,6 @@ collections:
   hidden-pages:
     output: true
     order:
+      - About your iPad/The Don'ts.md
       - About your iPad/Home.md
       - About your iPad/.keep
