{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -11,7 +11,7 @@ collections:
       - Sports & Games/Sailing.md
       - Sports & Games/Softball.md
       - Sports & Games/Tennis.md
-      - Sports & Games/Tenpin Bowling.md
+      - Sports & Games/Bowling.md
       - Uniformed Groups/.keep
       - Uniformed Groups/Uniformed Groups.md
       - Uniformed Groups/Girl Guides.md
