{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -24,7 +24,7 @@ collections:
       - Visual & Performing Arts/Dance (Modern).md
       - Visual & Performing Arts/String Ensemble.md
       - Visual & Performing Arts/Symphonic Band.md
-      - Visual & Performing Arts/TK Thespians (Drama).md
+      - Visual & Performing Arts/English Drama.md
       - Clubs and Service Boards/.keep
       - Clubs and Service Boards/Infocomm Club (Media Production).md
       - Clubs and Service Boards/Interact Club.md
