{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_hidden-pages/collection.yml
+++ b/_hidden-pages/collection.yml
@@ -2,6 +2,7 @@ collections:
   hidden-pages:
     output: true
     order:
+      - About your iPad/Information on After School Hours.md
       - About your iPad/Installing Approved Apps.md
       - About your iPad/.keep
       - About your iPad/Home.md
