--- a/_hidden-pages/collection.yml
+++ b/_hidden-pages/collection.yml
@@ -6,5 +6,5 @@ collections:
       - About your iPad/Home.md
       - About your iPad/The Don'ts.md
       - About your iPad/Installing Approved Apps.md
-      - About your iPad/Information on After School Hours.md
+      - About your iPad/After School Hours Profile.md
       - About your iPad/Troubleshooting.md
