{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_tkignite/collection.yml
+++ b/_tkignite/collection.yml
@@ -2,5 +2,6 @@ collections:
   tkignite:
     output: true
     order:
+      - NDLP/The Don'ts.md
       - NDLP/About Your iPad.md
       - NDLP/.keep
