--- a/_tkignite/collection.yml
+++ b/_tkignite/collection.yml
@@ -2,6 +2,7 @@ collections:
   tkignite:
     output: true
     order:
+      - NDLP/After School Profile.md
       - NDLP/Installing Approved Apps.md
       - NDLP/The Don'ts.md
       - NDLP/About Your iPad.md
