{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_tkignite/collection.yml
+++ b/_tkignite/collection.yml
@@ -2,6 +2,7 @@ collections:
   tkignite:
     output: true
     order:
+      - NDLP/Troubleshooting.md
       - NDLP/After School Profile.md
       - NDLP/Installing Approved Apps.md
       - NDLP/The Don'ts.md
