--- a/_admin/collection.yml
+++ b/_admin/collection.yml
@@ -2,6 +2,7 @@ collections:
   admin:
     output: true
     order:
+      - Subpages/.keep
       - Example.md
       - CCA Achievements.md
       - Art Club (Mockup Page).md
