{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_admin/collection.yml
+++ b/_admin/collection.yml
@@ -2,6 +2,7 @@ collections:
   admin:
     output: true
     order:
+      - Subpages/School Canteen Advertisement.md
       - Subpages/.keep
       - Example.md
       - CCA Achievements.md
