--- a/_admin/collection.yml
+++ b/_admin/collection.yml
@@ -2,6 +2,7 @@ collections:
   admin:
     output: true
     order:
+      - Announcements.md
       - Release of O – Level Results.md
       - Class of 2021 School Graduation Certificate & Testimonial.md
       - Financial Assistance Scheme (FAS) 2023.md
