{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_admin/collection.yml
+++ b/_admin/collection.yml
@@ -2,6 +2,7 @@ collections:
   admin:
     output: true
     order:
+      - Resources.md
       - Student Well–being Framework.md
       - Announcements.md
       - Release of O – Level Results.md
