{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_announcements/collection.yml
+++ b/_announcements/collection.yml
@@ -2,5 +2,6 @@ collections:
   announcements:
     output: true
     order:
+      - Financial Assistance Scheme (FAS) 2023.md
       - Financial Assistance Scheme (FAS) 2024.md
       - School Canteen Advertisement.md
