{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_announcements/collection.yml
+++ b/_announcements/collection.yml
@@ -2,4 +2,5 @@ collections:
   announcements:
     output: true
     order:
+      - School Canteen Advertisement.md
       - Financial Assistance Scheme (FAS).md
