{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_learning-at-tkgs/collection.yml
+++ b/_learning-at-tkgs/collection.yml
@@ -15,7 +15,7 @@ collections:
       - Academic/Science.md
       - Academic/Physical Education.md
       - Academic/.keep
-      - Student Development/Student Well–being.md
+      - Student Development/Student Development.md
       - Student Development/Counselling.md
       - Student Development/Character and Citizenship Education.md
       - Student Development/Sexuality Education.md
