{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_learning-at-tkgs/collection.yml
+++ b/_learning-at-tkgs/collection.yml
@@ -17,7 +17,7 @@ collections:
       - Academic/.keep
       - Student Development/.keep
       - Student Development/Student Development.md
-      - Student Development/Student Well being.md
+      - Student Development/Student Well–being.md
       - Student Development/Student Leadership Development.md
       - Student Development/Counselling.md
       - Student Development/Character and Citizenship Education.md
