{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"819"}

--- a/_reusable-pages/collection.yml
+++ b/_reusable-pages/collection.yml
@@ -2,4 +2,5 @@ collections:
   reusable-pages:
     output: true
     order:
+      - Student Leadership.md
       - Student Well–being Framework.md
