--- a/_learning-at-tkgs/collection.yml
+++ b/_learning-at-tkgs/collection.yml
@@ -16,7 +16,7 @@ collections:
       - Academic/.keep
       - Student Development/.keep
       - Student Development/Student Development.md
-      - Student Development/Student Well–being.md
+      - Student Development/Student Well–Being.md
       - Student Development/Student Leadership Development.md
       - Student Development/Counselling.md
       - Student Development/Character and Citizenship Education.md
