{"message":"Update file: collection.yml","userId":"819","fileName":"collection.yml"}

--- a/_learning-at-tkgs/collection.yml
+++ b/_learning-at-tkgs/collection.yml
@@ -6,6 +6,7 @@ collections:
       - Signature Programmes/TKGlow.md
       - Signature Programmes/Music Elective Programme.md
       - Signature Programmes/.keep
+      - Academic/Teaching & Learning Framework.md
       - Academic/Aesthetics.md
       - Academic/English & Literature.md
       - Academic/Humanities.md
