{"message":"Update file: collection.yml","userId":"819","fileName":"collection.yml"}

--- a/_learning-at-tkgs/collection.yml
+++ b/_learning-at-tkgs/collection.yml
@@ -16,7 +16,7 @@ collections:
       - Academic/Physical Education.md
       - Academic/.keep
       - Student Development/.keep
-      - Student Development/Student Development.md
+      - Student Development/Student Development Framework.md
       - Student Development/Student Well–Being.md
       - Student Development/Student Leadership Development.md
       - Student Development/Counselling.md
