{"message":"Update file: collection.yml","userId":"819","fileName":"collection.yml"}

--- a/_admin/collection.yml
+++ b/_admin/collection.yml
@@ -2,5 +2,6 @@ collections:
   admin:
     output: true
     order:
+      - Test P Message.md
       - Announcements.md
       - Contact Information.md
