{"message":"Update file: collection.yml","userId":"819","fileName":"collection.yml"}

--- a/_admin/collection.yml
+++ b/_admin/collection.yml
@@ -2,6 +2,7 @@ collections:
   admin:
     output: true
     order:
+      - Teaching Staff.md
       - Test P Message.md
       - Announcements.md
       - Contact Information.md
