--- a/_announcements/collection.yml
+++ b/_announcements/collection.yml
@@ -2,5 +2,6 @@ collections:
   announcements:
     output: true
     order:
+      - O Level Release 2024.md
       - School Canteen Advertisement.md
       - Financial Assistance Scheme (FAS).md
