--- a/_admin/collection.yml
+++ b/_admin/collection.yml
@@ -2,6 +2,7 @@ collections:
   admin:
     output: true
     order:
+      - School Canteen Advertisement.md
       - Teaching Staff.md
       - Test P Message.md
       - Announcements.md
