--- a/_reusable-pages/collection.yml
+++ b/_reusable-pages/collection.yml
@@ -2,5 +2,6 @@ collections:
   reusable-pages:
     output: true
     order:
+      - Release of O Level Results.md
       - Student Leadership.md
       - Student Well–being Framework.md
