--- a/_archive-pages/collection.yml
+++ b/_archive-pages/collection.yml
@@ -2,5 +2,6 @@ collections:
   archive-pages:
     output: true
     order:
+      - School Canteen Advertisement.md
       - Sparkling Moments/2021.md
       - Sparkling Moments/.keep
