{"message":"Update file: collection.yml","userId":"819","fileName":"collection.yml"}

--- a/_learning-at-tkgs/collection.yml
+++ b/_learning-at-tkgs/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - Signature Programmes/TKGS Plus.md
-      - Signature Programmes/TKGlow.md
+      - Signature Programmes/TKGlow!.md
       - Signature Programmes/Music Elective Programme.md
       - Signature Programmes/.keep
       - Academic/Teaching & Learning Framework.md
