{"message":"Update file: _config.yml","userId":"819","fileName":"_config.yml"}

--- a/_config.yml
+++ b/_config.yml
@@ -57,4 +57,4 @@ facebook-pixel: ""
 google_analytics: ""
 linkedin-insights: ""
 resources_name: tkgs-sparkling-moments
-google_analytics_ga4: ""
+google_analytics_ga4: G-L9NBDGEND0
