{"message":"Update file: collection.yml","userId":"819","fileName":"collection.yml"}

--- a/_learning-at-tkgs/collection.yml
+++ b/_learning-at-tkgs/collection.yml
@@ -2,6 +2,7 @@ collections:
   learning-at-tkgs:
     output: true
     order:
+      - Signature Programmes/TKGS Spark Series.md
       - Signature Programmes/TKGS Plus.md
       - Signature Programmes/TKGlow!.md
       - Signature Programmes/Music Elective Programme.md
