{"message":"Update file: collection.yml","userId":"819","fileName":"collection.yml"}

--- a/_announcements/collection.yml
+++ b/_announcements/collection.yml
@@ -2,5 +2,6 @@ collections:
   announcements:
     output: true
     order:
+      - Student Details Form.md
       - School Graduation Certificate.md
       - Financial Assistance Scheme (FAS).md
