--- a/_announcements/collection.yml
+++ b/_announcements/collection.yml
@@ -2,6 +2,6 @@ collections:
   announcements:
     output: true
     order:
-      - Student Details Form.md
+      - Update of Particulars.md
       - School Graduation Certificate.md
       - Financial Assistance Scheme (FAS).md
