{"message":"Update file: collection.yml","userId":"819","fileName":"collection.yml"}

--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -26,7 +26,7 @@ collections:
       - Visual & Performing Arts/String Ensemble.md
       - Visual & Performing Arts/Symphonic Band.md
       - Clubs and Service Boards/.keep
-      - Clubs and Service Boards/Infocomm Club (Media Production).md
+      - Clubs and Service Boards/Infocomm Technology (Media Production).md
       - Clubs and Service Boards/Interact Club.md
       - Clubs and Service Boards/Literary & Debating Society.md
       - Clubs and Service Boards/Library Board.md
