{"message":"Update file: collection.yml","userId":"819","fileName":"collection.yml"}

--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -25,6 +25,7 @@ collections:
       - Visual & Performing Arts/English Drama.md
       - Visual & Performing Arts/String Ensemble.md
       - Visual & Performing Arts/Symphonic Band.md
+      - Clubs and Service Boards/Clubs and Service Boards.md
       - Clubs and Service Boards/.keep
       - Clubs and Service Boards/Infocomm Technology (Media Production).md
       - Clubs and Service Boards/Interact Club.md
