{"message":"Update file: collection.yml","userId":"706","fileName":"collection.yml"}

--- a/_resources/collection.yml
+++ b/_resources/collection.yml
@@ -7,7 +7,7 @@ collections:
       - Staff Resources.md
       - Parent Resources.md
       - Admission/.keep
-      - Admission/Sec 1 Admission.md
+      - Admission/Sec 1 Admission Exercise.md
       - Admission/Appeal Process for Sec 1 Admission.md
       - Admission/Direct School Admission.md
       - Yearbook.md
